# domainDecomposition

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  Scalability_Results.csv  main.cpp  sbatch.job  scalability_test.sh
src/: CMakeLists.txt  DD_Utilities.cpp  DD_Utilities.hpp  EllipticProblem.cpp  EllipticProblem.hpp  Fem2DSquareLagrangePCC.cpp  Fem2DSquareLagrangePCC.hpp  PDE_Equation.cpp  PDE_Equation.hpp
